パンくず補記

--- a/app/views/questions/age.html.erb
+++ b/app/views/questions/age.html.erb
@@ -1,3 +1,5 @@
+<% breadcrumb :age, @age %>
+<%= render 'questions/breadcrumbs'%>
 <%= render 'questions/aside'%>
 <%= render 'questions/l-side'%>
 <div class="container">
