--- a/app/views/questions/category.html.erb
+++ b/app/views/questions/category.html.erb
@@ -1,3 +1,5 @@
+<% breadcrumb :category, @category %>
+<%= render 'questions/breadcrumbs'%>
 <%= render 'questions/aside'%>
 <%= render 'questions/l-side'%>
 <div class="container">
