レスポンシブ

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,8 +1,10 @@
+<div class="wrap">
 <%= render 'questions/aside'%>
 
 <%= render 'questions/l-side'%>
 
 <%= render 'questions/main_content'%>
+</div>
 
 
 
