ビュー調整

--- a/app/assets/stylesheets/main_content.scss
+++ b/app/assets/stylesheets/main_content.scss
@@ -32,6 +32,7 @@
         padding-left: 30px;
         padding-top: 15px;
         padding-bottom: 7px;
+        margin-right: 15px;
         margin-bottom: 20px;
         transition: box-shadow .5s;
         list-style: none;
