--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <%# <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation"> %>
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
