--- a/app/assets/stylesheets/question_show.scss
+++ b/app/assets/stylesheets/question_show.scss
@@ -31,14 +31,17 @@
     font-size: 13px;
   }
 }
-.reactionbody:before {
-  content: "";
-  position: absolute;
-  top: -30px;
-  left: 50%;
-  margin-left: -330px;
-  border: 15px solid transparent;
-  border-bottom: 15px solid #e0edff;
+
+@media screen and (min-width:900px){
+  .reactionbody:before {
+    content: "";
+    position: absolute;
+    top: -30px;
+    left: 35%;
+    margin-left: -330px;
+    border: 15px solid transparent;
+    border-bottom: 15px solid #e0edff;
+  }
 }
 
 .reactionbody p {
