--- a/app/views/answers/new.html.erb
+++ b/app/views/answers/new.html.erb
@@ -9,7 +9,7 @@
 <%=@question.created_at.strftime("%Y年%m月%d日")%>
 </p>
 </div>
-<%= form_for @answer , url:"/questions/#{@question.id}/answer" do |f| %>
+<%= form_for [@question, @answer] do |f| %>
 <%=f.label:body,"回答"%>
  <div class="form-group padding-top-15per">
 <%=f.text_area:body ,rows: 10,class:'form-control'%>
