--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -45,7 +45,7 @@
       <% if @question.user_id == current_user.id  %>
         <button id="open" class='btn btn-danger'>削除</button>
       <%end%>
-        <%=link_to '回答する',"/questions/#{@question.id}/answers/new",class:'btn btn-info',style:'margin-bottom:30px;margin-right:10px;'if @question.user_id != current_user.id%>
+        <%=link_to '回答する',new_question_answer_path(@question) ,class:'btn btn-info',style:'margin-bottom:30px;margin-right:10px;'if @question.user_id != current_user.id%>
       <%end%>
       <div class="bookmark-line">
         <%= render partial: "bookmarks/bookmark", locals: { question: @question } %>
