SNSシェア追加1

--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -235,6 +235,7 @@ ul {
   .bookmark-line{
     cursor: pointer;
     cursor: hand;
+    width:166px;
     .bookmark{
       display: inline-block;
       color: #333;
