--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -50,10 +50,10 @@
       <div class="bookmark-line">
         <%= render partial: "bookmarks/bookmark", locals: { question: @question } %>
       </div>
-      <%# <div id='sosyal'>
-        <%= link_to 'Twitter', "https://twitter.com/share?url=#{request.url}&text=タイトル", class: 'twitter', title: 'Twitter', target: '_blank' %>
-        <%# <%= link_to 'Facebook', "https://www.facebook.com/sharer/sharer.php?u=#{request.url}&text=タイトル", class: 'facebook', title: 'Facebook', target: '_blank' %> 
-      <%# </div>  %>
+      <div id='sosyal'>
+        <%= link_to 'Twitter', "https://twitter.com/share?url=#{request.url}&text=タイトル", class: 'twitter', title: 'Twitter', target: '_blank' if user_signed_in? %>
+        <%= link_to 'Facebook', "https://www.facebook.com/sharer/sharer.php?u=#{request.url}&text=タイトル", class: 'facebook', title: 'Facebook', target: '_blank' if user_signed_in? %> 
+      </div>  
     </div>
   </div>
 
