--- a/app/assets/stylesheets/sns.scss
+++ b/app/assets/stylesheets/sns.scss
@@ -46,7 +46,7 @@
 
 @media screen and (max-width:450px){
   #sosyal{
-    margin-left:30px;
+    margin-left:18px;
     .facebook {
       background-color: #2e4a88;
       text-shadow: 0 -1px -1px #1B3D82;
@@ -59,7 +59,8 @@
       text-decoration: none;
       color: white;
       border-radius: 5px;
-      padding: 5px 20px;
+      padding: 5px 14
+      px;
       top:5px;
     }
     .twitter {
