レスポンシブ

--- a/app/assets/stylesheets/sns.scss
+++ b/app/assets/stylesheets/sns.scss
@@ -59,8 +59,7 @@
       text-decoration: none;
       color: white;
       border-radius: 5px;
-      padding: 5px 14
-      px;
+      padding: 5px 14px;
       top:5px;
     }
     .twitter {
