--- a/app/views/questions/_aside.html.erb
+++ b/app/views/questions/_aside.html.erb
@@ -7,4 +7,7 @@
       <% end %>
     <%end%>
   </div>
+  <%= sort_link(@search, :created_at, "作成日順", default_order: :desc)%>
+  <%= sort_link(@search, :answers_count, "回答数順", default_order: :desc)%>
+  <%= sort_link(@search, :bookmarks_count, "ブックマーク数順" , default_order: :desc)%>
 </div>
