--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -11,6 +11,10 @@
           <%= f.label :category ,'カテゴリー'%><br />
           <%= f.collection_select :category, Category.all, :id, :value  , { prompt: '--' }, class:"form-control"%>
         </div>
+        <%# <div class="form-group">
+          <%= f.label :tag_list %>
+          <%# <%= text_field_tag 'question[tag_list]', @question.tag_list.join(","), :class => "form-control" %> 
+        <%# </div> %> 
         <%=f.label:body,"本文"%>
         <div class="form-group padding-top-15per">
           <%=f.text_area:body ,rows: 10,class:'form-control'%>
