--- a/app/assets/stylesheets/aside.scss
+++ b/app/assets/stylesheets/aside.scss
@@ -3,3 +3,9 @@
   display: block;
   margin:0 auto;
 }
+.js-enable-touching{
+  width: 46px;
+  height: 40px;
+  margin-right: 89px;
+  float: right;
+}
