--- a/app/views/questions/_main_content.html.erb
+++ b/app/views/questions/_main_content.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <%= render 'questions/sort'%>
   <ul class="row",style="padding-left: 0px;padding-top: 0px;">
     <% @results.each do |result|%>
 
