--- a/app/views/questions/_aside.html.erb
+++ b/app/views/questions/_aside.html.erb
@@ -5,9 +5,12 @@
       <%= button_tag type: 'submit', class: "search-box__btn" do %>
       <%= icon('fas', 'search') %>
       <% end %>
-      <button id="sort" class="js-enable-touching open-dialog search-controller_sort">
-        <i class="fas fa-list-ul fa-2x"></i>
-      </button>
+      <%# <button id="sort" class="js-enable-touching open-dialog search-controller_sort"> %>
+        <%# <i class="fas fa-list-ul fa-2x"></i> %>
+      <%# </button> %>
     <%end%>
   </div>
+  <%= sort_link(@search, :created_at, "作成日順", default_order: :desc)%>
+  <%= sort_link(@search, :answers_count, "回答数順", default_order: :desc)%>
+  <%= sort_link(@search, :bookmarks_count, "ブックマーク数順" , default_order: :desc)%>
 </div>
