--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
   </head>
   <body>
+    <%= render 'layouts/loader'%>
    
     <%= render 'layouts/header'%>
   
